*glfw-2.7.7-r1 (23 Apr 2016)
*glfw-3.1.2-r1 (23 Apr 2016)

  23 Apr 2016; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +files/glfw-2.7.7-dyn.patch, +files/glfw-2.7.7-pkgconfig.patch,
  +glfw-2.7.7-r1.ebuild, +glfw-3.1.2-r1.ebuild, +metadata.xml:
  media-libs/glfw: new ebuilds  modified versions from the tree which are
  slotted and contain support for mutlilib. To achieve slotting version 2.7.7
  doesn't install the symlink from libglfw.so.